# py-udal-mgo

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml
contracts/: Batch1and2_combined_logsheets_2024-11-12.csv  Observatory_combined_logsheets_validated.csv  b12_combined_logsheets_validated.csv  embrc.eu_emobon_observatory-overview.csv  metagoflow_analyses.LSU.parquet  metagoflow_analyses.SSU.parquet  metagoflow_analyses.go.parquet  metagoflow_analyses.go_slim.parquet  metagoflow_analyses.ko.parquet  pull_combined_logsheets.py  pull_observatories.py  utils_contracts.py
mgo/: broker.py  namedqueries.py  pull_observatories.py  result.py  udal.py
mgo/brokers/: local.py
mgo/test/: test_broker_local.py
