[project]
name = "py-udal-mgo"
version = "0.0.0"
description = "Marine Genomics Observatories UDAL implementation"
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "mgo"},
]

[tool.poetry.dependencies]
py-udal-interface = {git = "https://github.com/fair-ease/py-udal-interface.git"}
natsort = "^8.4.0"
pandas = "^2.2.3"

[tool.poetry.group.example.dependencies]
ipykernel = "^6.29.5"
