[project]
name = "py-udal-mgo"
version = "0.0.0"
description = "Marine Genomics Observatories UDAL implementation"
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "mgo"},
    {include = "contracts"},
]

[tool.poetry.dependencies]
py-udal-interface = {git = "https://github.com/fair-ease/py-udal-interface.git"}
fastparquet = "^2024.11.0"
natsort = "^8.4.0"
pandas = "^2.2.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^6.0"
pytest-timeout = "^2.1.0"

[tool.poetry.group.example.dependencies]
ipykernel = "^6.29.5"
